--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "miracleApp": {
+    "mytekskills": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/miracleApp",
+            "outputPath": "dist/mytekskills",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "miracleApp:build"
+            "browserTarget": "mytekskills:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "miracleApp:build:production"
+              "browserTarget": "mytekskills:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "miracleApp:build"
+            "browserTarget": "mytekskills:build"
           }
         },
         "test": {
@@ -101,7 +101,7 @@
         }
       }
     },
-    "miracleApp-e2e": {
+    "mytekskills-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -109,11 +109,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "miracleApp:serve"
+            "devServerTarget": "mytekskills:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "miracleApp:serve:production"
+              "devServerTarget": "mytekskills:serve:production"
             }
           }
         },
@@ -129,5 +129,5 @@
       }
     }
   },
-  "defaultProject": "miracleApp"
+  "defaultProject": "mytekskills"
 }
